# OpenCVTest

./: .gitignore  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/cayden/opencvtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/cayden/opencvtest/: MainActivity.java  NativeLib.java
app/src/main/jni/: native-lib.cpp
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/cayden/opencvtest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
